feat: add cookie policy page

--- a/src/app/share/layout/footer/footer.component.html
+++ b/src/app/share/layout/footer/footer.component.html
@@ -13,6 +13,7 @@
     <h6 class="footer-title">Legal</h6>
     <a class="link-hover link" href="/terms">Terms of Service</a>
     <a class="link-hover link" href="/privacy">Privacy Policy</a>
+    <a class="link-hover link" href="/cookie-policy">Cookie Policy</a>
   </nav>
 
   <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
