--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 
 @import url('animate.css');
 @import url('./assets/css/global.scss');
+@import url('./assets/css/cookie.scss');
 @import url('./assets/css/animation.scss');
 
 h1,
