fix: does not save to local storage if cookie was not accepted

--- a/src/app/feature/ui/theme/theme-switch.component.html
+++ b/src/app/feature/ui/theme/theme-switch.component.html
@@ -4,7 +4,7 @@
     id="toggle_theme"
     class="toggle--checkbox hidden"
     [checked]="isDark() ? 'checked' : null"
-    (change)="themeService.toggleTheme()" />
+    (change)="toggleTheme()" />
 
   <label for="toggle_theme" class="toggle--label relative flex cursor-pointer">
     <span class="toggle--label-background"></span>
@@ -12,7 +12,7 @@
 </div>
 
 <div class="lg:hidden">
-  <button class="btn btn-circle btn-ghost" (click)="themeService.toggleTheme()">
+  <button class="btn btn-circle btn-ghost" (click)="toggleTheme()">
     @if (isDark() === true) {
       <ng-icon name="hugeSun03" size="24"></ng-icon>
     } @else {
