--- a/src/app/pages/non-authorized/develop/develop-page.component.html
+++ b/src/app/pages/non-authorized/develop/develop-page.component.html
@@ -2,6 +2,13 @@
   <div class="p-4">
     <app-content-title title="UI components" />
 
+    <div class="py-4" id="MarkdownHelpComponent">
+      <h2 class="text-2xl">MarkdownHelpComponent</h2>
+      <div class="mt-4">
+        <app-static-markdown-help />
+      </div>
+    </div>
+
     <div class="py-4" id="EditEventFormComponent">
       <h2 class="text-2xl">EditEventFormComponent</h2>
       <div class="mt-4 grid grid-cols-2 gap-4">
