feat: create form for saving account settings

--- a/src/app/feature/ui/modal/modal-factory.component.html
+++ b/src/app/feature/ui/modal/modal-factory.component.html
@@ -6,6 +6,6 @@
     <app-show-user-features />
   }
   @if (windowType() === ModalWindowType.SETTINGS) {
-    <app-show-user-settings />
+    <app-change-user-settings />
   }
 </app-modal>
