feat: saving account
feat: saving account settings

--- a/src/app/feature/user/settings/settings.component.html
+++ b/src/app/feature/user/settings/settings.component.html
@@ -51,6 +51,7 @@
 
 <app-shared-form-controls
   [isDisabled]="isDisabled()"
+  [isLoading]="isLoading()"
   [acceptButtonIcon]="icon"
   acceptButtonTitle="save"
   (acceptAction)="save()"
