fix: fix event dublicated after update account features or update settings

--- a/src/app/pages/authorized/my/my-page.component.html
+++ b/src/app/pages/authorized/my/my-page.component.html
@@ -6,11 +6,11 @@
       </div>
     } @else {
       @if (shouldAddTimeline()) {
-        @if (activeAccount(); as account) {
+        @if (activeAccountId(); as accountId) {
           <app-create-timeline-button
             [isAuthorized]="true"
             [isLoading]="isLoading()"
-            (addTimeline)="addTimeline($event, account.id)" />
+            (addTimeline)="addTimeline($event, accountId)" />
         }
       } @else {
         @if (activeTimeline()) {
