fix: fix margin on edit event form

--- a/src/app/feature/edit-event/edit-event-form/edit-event-form.component.html
+++ b/src/app/feature/edit-event/edit-event-form/edit-event-form.component.html
@@ -33,7 +33,7 @@
       [class.active]="activeTab().uuid === 'link'" />
   </div>
 
-  <div class="mt-8 flex place-items-center gap-4 lg:hidden">
+  <div class="mt-4 flex place-items-center gap-4 lg:hidden">
     <label
       for="is_private"
       class="flex cursor-not-allowed place-items-center gap-2 opacity-40">
@@ -49,7 +49,7 @@
     </label>
   </div>
   <div
-    class="tooltip tooltip-top tooltip-info hidden shrink lg:block"
+    class="tooltip tooltip-top tooltip-info hidden shrink lg:mt-4 lg:block"
     data-tip="coming soon">
     <label
       for="is_private"
