fix: fix event image again

--- a/src/app/feature/timeline/components/event/image/image.component.html
+++ b/src/app/feature/timeline/components/event/image/image.component.html
@@ -1,4 +1,4 @@
-<div class="flex h-60 w-full place-content-center">
+<div class="relative flex h-60 w-full items-center justify-center">
   @if (isLoading()) {
     <app-loader />
   } @else {
