fix: fix saving event form

--- a/src/app/feature/edit-event/edit-event-form/edit-event-form.component.html
+++ b/src/app/feature/edit-event/edit-event-form/edit-event-form.component.html
@@ -24,7 +24,7 @@
           class="btn btn-warning btn-sm mt-4 w-full"
           type="button"
           (click)="removeImage()">
-          remove image {{ editForm.controls.imageId.value }}
+          remove image
         </button>
       }
     </div>
