--- a/src/app/share/layout/content/loading-button/loading-button.component.html
+++ b/src/app/share/layout/content/loading-button/loading-button.component.html
@@ -1,4 +1,5 @@
 <button
+  type="button"
   class="btn btn-{{ style() }}"
   (click)="clickEvent.emit()"
   [attr.disabled]="shouldDisable() ? true : null">
