fix: fix submit form on enter press

--- a/src/app/feature/edit-event/edit-event-form/edit-event-form.component.html
+++ b/src/app/feature/edit-event/edit-event-form/edit-event-form.component.html
@@ -1,6 +1,7 @@
 <form
   class="edit-form"
   [class.skeleton]="loading()"
+  (submit)="formSubmit($event)"
   method="post"
   enctype="multipart/form-data">
   <app-shared-tabs
