--- a/src/app/feature/user/settings/settings.component.html
+++ b/src/app/feature/user/settings/settings.component.html
@@ -1,31 +1,38 @@
 <div class="mt-4 lg:flex lg:gap-4">
-  <!-- <div class="relative lg:w-64 lg:flex-none"> -->
-  <!--   <div class="avatar"> -->
-  <!--     <div -->
-  <!--       class="rounded-xl ring ring-accent ring-offset-2 ring-offset-base-100"> -->
-  <!--       <img -->
-  <!--         src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" /> -->
-  <!--     </div> -->
-  <!--   </div> -->
-  <!---->
-  <!--   <div class="join absolute -bottom-2 right-0"> -->
-  <!--     <a -->
-  <!--       class="btn btn-warning join-item btn-sm" -->
-  <!--       (click)="removeAvatar()" -->
-  <!--       (keyup.enter)="removeAvatar()" -->
-  <!--       tabindex="0"> -->
-  <!--       <ng-icon name="saxCloseSquareOutline" size="24" /> -->
-  <!--     </a> -->
-  <!---->
-  <!--     <a -->
-  <!--       class="btn btn-primary join-item btn-sm" -->
-  <!--       (click)="changeAvatar()" -->
-  <!--       (keyup.enter)="changeAvatar()" -->
-  <!--       tabindex="0"> -->
-  <!--       <ng-icon name="saxCameraOutline" size="24" /> -->
-  <!--     </a> -->
-  <!--   </div> -->
-  <!-- </div> -->
+  <div class="relative lg:w-64 lg:flex-none">
+    <div class="avatar h-full w-full justify-center">
+      @if (avatarUrl(); as avatar) {
+        <div
+          class="h-full w-full rounded-xl ring ring-accent ring-offset-2 ring-offset-base-100">
+          <img
+            [src]="avatarUrl()"
+            class="h-full w-full"
+            [alt]="form.controls.name.value" />
+        </div>
+      } @else {
+        <ng-icon name="saxUserSquareBulk" size="242" />
+      }
+    </div>
+
+    <div class="join absolute -bottom-2 right-0 hidden">
+      @if (avatarUrl()) {
+        <a
+          class="btn btn-warning join-item btn-sm"
+          (click)="removeAvatar()"
+          (keyup.enter)="removeAvatar()"
+          tabindex="0">
+          <ng-icon name="saxCloseSquareOutline" size="24" />
+        </a>
+      }
+      <a
+        class="btn btn-primary join-item btn-sm"
+        (click)="changeAvatar()"
+        (keyup.enter)="changeAvatar()"
+        tabindex="0">
+        <ng-icon name="saxCameraOutline" size="24" />
+      </a>
+    </div>
+  </div>
   <div class="lg:flex-auto">
     <h3 class="text-lg lg:mb-2 lg:text-2xl">name</h3>
     <label class="join w-full">
