--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -4,18 +4,12 @@
     <p class="hidden lg:block">Copyright © 2024 - All right reserved</p>
 
     <nav class="grid grid-flow-col gap-4 lg:hidden">
-      <a class="link-hover link" href="/terms">Terms of Service</a>
-      <a class="link-hover link" href="/privacy">Privacy Policy</a>
+      <a class="link-hover link" href="/legal/terms">Terms of Service</a>
+      <a class="link-hover link" href="/legal/privacy">Privacy Policy</a>
     </nav>
   </aside>
 
-  <nav class="hidden lg:grid">
-    <h6 class="footer-title">Legal</h6>
-    <a class="link-hover link" href="/terms">Terms of Service</a>
-    <a class="link-hover link" href="/privacy">Privacy Policy</a>
-    <a class="link-hover link" href="/cookie-policy">Cookie Policy</a>
-  </nav>
-
+  <app-legal-ui-footer-menu />
   <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
     <div
       class="tooltip tooltip-right tooltip-primary lg:tooltip-left lg:tooltip-open"
