--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -9,7 +9,7 @@
     </nav>
   </aside>
 
-  <app-legal-ui-footer-menu />
+  <app-legal-footer-menu />
   <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
     <div
       class="tooltip tooltip-right tooltip-primary lg:tooltip-left lg:tooltip-open"
