refactor: refactor shared namespace

--- a/src/app/feature/non-authorized/legal/components/cookie/cookie-page.component.html
+++ b/src/app/feature/non-authorized/legal/components/cookie/cookie-page.component.html
@@ -1,6 +1,6 @@
 <app-layout>
   <div class="mx-4 mt-4">
-    <app-content-title title="Cookie Policy" />
+    <app-ui-content-title title="Cookie Policy" />
     <p>
       This Cookie Policy explains how we uses cookies and similar technologies
       to recognize you when you visit our website at 
