--- a/src/app/feature/non-authorized/legal/components/terms/terms-page.component.html
+++ b/src/app/feature/non-authorized/legal/components/terms/terms-page.component.html
@@ -1,6 +1,6 @@
 <app-layout>
   <div class="mx-4 mt-4">
-    <app-content-title title="Timeline Terms of Service" />
+    <app-ui-content-title title="Timeline Terms of Service" />
     <p>
       Please read these Terms of Service ("Terms") carefully before using
       Timeline. By accessing or using Timeline, you agree to be bound by these
