--- a/src/app/feature/non-authorized/legal/components/privacy/privacy-page.component.html
+++ b/src/app/feature/non-authorized/legal/components/privacy/privacy-page.component.html
@@ -1,6 +1,6 @@
 <app-layout>
   <div class="mx-4 mb-4">
-    <app-content-title title="Privacy Policy" />
+    <app-ui-content-title title="Privacy Policy" />
 
     <p>
       This Privacy Policy outlines how Timeline collects, uses, discloses, and
