--- a/src/app/pages/non-authorized/index/index-page.component.html
+++ b/src/app/pages/non-authorized/index/index-page.component.html
@@ -18,7 +18,7 @@
   </app-hero>
 
   <div class="mx-4 mt-4">
-    <app-content-title title="Our timeline" class="text-success" />
+    <app-ui-content-title title="Our timeline" class="text-success" />
   </div>
   <div>
     <div class="overflow-hidden px-4" [class.h-192]="isCollapsed()">
@@ -39,6 +39,6 @@
     </p>
   </div>
   <div class="mt-4 hidden rounded-lg bg-base-100 p-4">
-    <app-content-title title="Features" class="text-primary" />
+    <app-ui-content-title title="Features" class="text-primary" />
   </div>
 </app-layout>
