--- a/src/app/shared/form/controls/controls.component.html
+++ b/src/app/shared/form/controls/controls.component.html
@@ -1,13 +1,13 @@
 <div class="mt-8 flex place-items-center gap-4">
   <div class="flex-none">
-    <app-loading-button
+    <app-content-loading-button
       [title]="acceptButtonTitle()"
       [isLoading]="isLoading()"
       [isDisabled]="isDisabled()"
       [icon]="acceptButtonIcon()"
       (clickEvent)="acceptAction.emit()">
       {{ acceptButtonTitle() }}
-    </app-loading-button>
+    </app-content-loading-button>
   </div>
   <div class="flex-none">
     <button class="btn" (click)="dismissAction.emit()">
