refactor: refactor cookie consent

--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -11,5 +11,5 @@
   </div>
 </div>
 <app-notifications />
-<app-cookie-consent />
+<app-cookie-consent  (consent)="cookieConsent($event)" />
 <app-footer />
