refactor: rename shared components

--- a/src/app/feature/non-authorized/legal/components/privacy/privacy-page.component.html
+++ b/src/app/feature/non-authorized/legal/components/privacy/privacy-page.component.html
@@ -1,6 +1,6 @@
-<app-layout>
+<app-shared-layout>
   <div class="mx-4 mb-4">
-    <app-ui-content-title title="Privacy Policy" />
+    <app-shared-content-title title="Privacy Policy" />
 
     <p>
       This Privacy Policy outlines how Timeline collects, uses, discloses, and
@@ -66,4 +66,4 @@
       contact us at [your email address].
     </p>
   </div>
-</app-layout>
+</app-shared-layout>
