--- a/src/app/feature/non-authorized/user/components/login-page/login-page.component.html
+++ b/src/app/feature/non-authorized/user/components/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<app-layout>
+<app-shared-layout>
   <app-hero>
     <div class="my-16 max-w-lg">
       <h1 class="text-5xl font-bold">Login with Google</h1>
@@ -23,4 +23,4 @@
       </button>
     </div>
   </app-hero>
-</app-layout>
+</app-shared-layout>
