--- a/src/app/pages/authorized/my/my-page.component.html
+++ b/src/app/pages/authorized/my/my-page.component.html
@@ -1,4 +1,4 @@
-<app-layout>
+<app-shared-layout>
   <div class="p-4">
     @if (isLoading()) {
       <div class="flex justify-center">
@@ -42,4 +42,4 @@
     }
   </div>
   <app-modal-factory />
-</app-layout>
+</app-shared-layout>
