--- a/src/app/pages/non-authorized/develop/develop-page.component.html
+++ b/src/app/pages/non-authorized/develop/develop-page.component.html
@@ -1,6 +1,6 @@
-<app-layout>
+<app-shared-layout>
   <div class="p-4">
-    <app-ui-content-title title="UI components" />
+    <app-shared-content-title title="UI components" />
 
     <div class="py-4" id="MarkdownHelpComponent">
       <h2 class="text-2xl">MarkdownHelpComponent</h2>
@@ -58,4 +58,4 @@
       </div>
     </div>
   </div>
-</app-layout>
+</app-shared-layout>
