--- a/src/app/feature/non-authorized/legal/components/terms/terms-page.component.html
+++ b/src/app/feature/non-authorized/legal/components/terms/terms-page.component.html
@@ -1,6 +1,6 @@
-<app-layout>
+<app-shared-layout>
   <div class="mx-4 mt-4">
-    <app-ui-content-title title="Timeline Terms of Service" />
+    <app-shared-content-title title="Timeline Terms of Service" />
     <p>
       Please read these Terms of Service ("Terms") carefully before using
       Timeline. By accessing or using Timeline, you agree to be bound by these
@@ -62,4 +62,4 @@
       email address].
     </p>
   </div>
-</app-layout>
+</app-shared-layout>
