refactor: moving again

--- a/src/app/feature/non-authorized/develop/components/develop-content/develop-content.component.html
+++ b/src/app/feature/non-authorized/develop/components/develop-content/develop-content.component.html
@@ -1,5 +1,5 @@
 <div class="relative z-20 rounded-lg bg-base-200 shadow-xl shadow-base-300">
-  <app-hero>
+  <app-shared-hero>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -9,7 +9,7 @@
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
     </p>
-  </app-hero>
+  </app-shared-hero>
   <div class="mx-4 mt-4">
     <p class="py-2">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
