--- a/src/app/feature/non-authorized/index/index-page.component.html
+++ b/src/app/feature/non-authorized/index/index-page.component.html
@@ -1,6 +1,6 @@
 <app-shared-layout>
-  <app-hero>
-    <img src="/assets/timeline_320x320.png" alt="timeline" />
+  <app-shared-hero>
+    <img src="/src/assets/timeline_320x320.png" alt="timeline" />
     <div>
       <h1 class="text-4xl lg:text-5xl">add your first personal timeline</h1>
       <p class="py-6">
@@ -15,7 +15,7 @@
         }
       </div>
     </div>
-  </app-hero>
+  </app-shared-hero>
 
   <div class="mx-4 mt-4">
     <app-shared-content-title title="Our timeline" class="text-success" />
