--- a/src/app/feature/non-authorized/user/components/login-page/login-page.component.html
+++ b/src/app/feature/non-authorized/user/components/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 <app-shared-layout>
-  <app-hero>
+  <app-shared-hero>
     <div class="my-16 max-w-lg">
       <h1 class="text-5xl font-bold">Login with Google</h1>
       <p class="pb-14 pt-6">
@@ -22,5 +22,5 @@
         Authorize
       </button>
     </div>
-  </app-hero>
+  </app-shared-hero>
 </app-shared-layout>
