--- a/src/app/feature/non-authorized/user/components/redirect-page/redirect-page.component.html
+++ b/src/app/feature/non-authorized/user/components/redirect-page/redirect-page.component.html
@@ -1,5 +1,5 @@
 <app-shared-layout>
-  <app-hero>
+  <app-shared-hero>
     <div class="my-16 max-w-lg">
       <h1 class="text-5xl font-bold">Finalize authorization</h1>
       <p class="pb-14 pt-6">
@@ -10,5 +10,5 @@
         <span class="loading loading-spinner"></span>
       </button>
     </div>
-  </app-hero>
+  </app-shared-hero>
 </app-shared-layout>
