--- a/src/app/feature/ui/layout/components/notifications/notifications-container.component.scss
+++ b/src/app/feature/ui/layout/components/notifications/notifications-container.component.scss
@@ -1,4 +1,4 @@
-@use '../../../../../assets/css/global' as g;
+@use '../../../../../../assets/css/global' as g;
 
 .notification-container {
   @apply fixed right-10 top-0 z-30 w-96 pe-4 pt-2;
