refactor: moving components

--- a/src/app/feature/authorized/dashboard/confirm/modal-confirm.component.html
+++ b/src/app/feature/authorized/dashboard/confirm/modal-confirm.component.html
@@ -1,4 +1,4 @@
-<app-modal
+<app-shared-modal
   [show]="show()"
   (closed)="dismissAction.emit()"
   [title]="confirmMessage()">
@@ -10,4 +10,4 @@
       confirm
     </button>
   </div>
-</app-modal>
+</app-shared-modal>
