--- a/src/app/feature/edit-event/edit-event-form/date-time-input/date-time-input.component.html
+++ b/src/app/feature/edit-event/edit-event-form/date-time-input/date-time-input.component.html
@@ -1,5 +1,5 @@
 <div class="pt-4"></div>
-<app-date-picker
+<app-shared-date-picker
   (selectDate)="updateDate($event)"
   [fromDate]="form().controls.date.value" />
 
