--- a/src/app/feature/edit-event/edit-event-form/upload-input/upload-input.component.html
+++ b/src/app/feature/edit-event/edit-event-form/upload-input/upload-input.component.html
@@ -21,7 +21,7 @@
     }
 
     @if (isLoading()) {
-      <app-loader />
+      <app-shared-loader />
     } @else {
       <p>drop or click</p>
     }
