--- a/src/app/feature/non-authorized/develop/develop-page.component.html
+++ b/src/app/feature/non-authorized/develop/develop-page.component.html
@@ -54,7 +54,7 @@
     <div class="py-4" id="LoaderComponent">
       <h2 class="text-2xl">LoaderComponent</h2>
       <div class="relative mt-4 h-44">
-        <app-loader />
+        <app-shared-loader />
       </div>
     </div>
   </div>
