fix: fix index hero

--- a/src/app/feature/non-authorized/index/index-page.component.html
+++ b/src/app/feature/non-authorized/index/index-page.component.html
@@ -1,6 +1,10 @@
 <app-shared-layout>
   <app-shared-hero>
-    <img src="/src/assets/timeline_320x320.png" alt="timeline" />
+    <img
+      src="/assets/timeline_320x320.png"
+      alt="timeline"
+      height="320"
+      width="320" />
     <div>
       <h1 class="text-4xl lg:text-5xl">add your first personal timeline</h1>
       <p class="py-6">
