refactor: move modal window factory

--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -14,4 +14,5 @@
   (markRead)="markRead($event)"
   [messages]="unreadMessages()" />
 <app-cookie-consent (consent)="cookieConsent($event)" />
+<app-modal-factory />
 <app-footer />
