--- a/src/app/feature/user/settings/settings.component.html
+++ b/src/app/feature/user/settings/settings.component.html
@@ -42,13 +42,17 @@
         [class.input-error]="form.controls.name.invalid"
         class="input join-item input-bordered w-full grow"
         [formControl]="form.controls.name" />
-      <!-- <button -->
-      <!--   class="btn join-item btn-neutral w-auto" -->
-      <!--   (click)="addAccount()" -->
-      <!--   (keyup.enter)="addAccount()" -->
-      <!--   tabindex="0"> -->
-      <!--   <ng-icon [svg]="addAccountIcon" size="24" /> -->
-      <!-- </button> -->
+      <app-feature-flag
+        [feature]="'show_user_accounts'"
+        [accountSettings]="accountSettings()">
+        <button
+          class="btn join-item btn-neutral w-auto"
+          (click)="addAccount()"
+          (keyup.enter)="addAccount()"
+          tabindex="0">
+          <ng-icon [svg]="addAccountIcon" size="24" />
+        </button>
+      </app-feature-flag>
     </label>
   </div>
 </div>
