refactor: refactor saving settings

--- a/src/app/feature/account/settings/settings.component.html
+++ b/src/app/feature/account/settings/settings.component.html
@@ -44,7 +44,7 @@
         [formControl]="form.controls.name" />
       <app-feature-flag
         [feature]="'show_user_accounts'"
-        [accountSettings]="accountSettings()">
+        [accountSettings]="featureSettings()">
         <button
           class="btn join-item btn-neutral w-auto"
           (click)="addAccount()"
