feat: add account form

--- a/src/app/feature/ui/layout/modal-factory/modal-factory.component.html
+++ b/src/app/feature/ui/layout/modal-factory/modal-factory.component.html
@@ -8,4 +8,7 @@
   @if (windowType() === ModalWindowType.SETTINGS) {
     <app-change-user-settings />
   }
+  @if (windowType() === ModalWindowType.ADD_ACCOUNT) {
+    <app-add-account />
+  }
 </app-shared-modal>
