--- a/src/app/feature/account/settings/settings.component.html
+++ b/src/app/feature/account/settings/settings.component.html
@@ -45,13 +45,15 @@
       <app-feature-flag
         [feature]="'show_user_accounts'"
         [accountSettings]="featureSettings()">
-        <button
-          class="btn join-item btn-neutral w-auto"
-          (click)="addAccount()"
-          (keyup.enter)="addAccount()"
-          tabindex="0">
-          <ng-icon [svg]="addAccountIcon" size="24" />
-        </button>
+        <div class="tooltip tooltip-left" data-tip="add account">
+          <button
+            class="btn join-item btn-neutral w-auto"
+            (click)="addAccount()"
+            (keyup.enter)="addAccount()"
+            tabindex="0">
+            <ng-icon [svg]="addAccountIcon" size="24" />
+          </button>
+        </div>
       </app-feature-flag>
     </label>
   </div>
