--- a/src/app/feature/ui/table-of-contents/components/table-of-contents/table-of-contents.component.scss
+++ b/src/app/feature/ui/table-of-contents/components/table-of-contents/table-of-contents.component.scss
@@ -6,10 +6,10 @@
     opacity: 1;
 
     a {
-      @apply font-medium;
+      font-weight: 500;
     }
   }
   a {
-    @apply font-light;
+    font-weight: 300;
   }
 }
