--- a/src/app/feature/account/features/feature-stage/feature-stage.component.scss
+++ b/src/app/feature/account/features/feature-stage/feature-stage.component.scss
@@ -1,6 +1,9 @@
 .stage {
   span {
-    @apply h-2 flex-grow rounded-box bg-base-300;
+    @apply rounded-box bg-base-300;
+
+    height: 0.5rem;
+    flex-grow: 1;
   }
 
   &.stage-started {
