--- a/src/app/feature/authorized/dashboard/edit-event/edit-event-form/edit-event-form.component.scss
+++ b/src/app/feature/authorized/dashboard/edit-event/edit-event-form/edit-event-form.component.scss
@@ -1,16 +1,20 @@
 @use '../../../../../../assets/css/global' as g;
 
 .edit-form {
-  @apply timeline-box relative mt-4 bg-base-300 pt-0 lg:mt-0;
+  @apply timeline-box bg-base-300 lg:mt-0;
+
+  position: relative;
+  padding-top: 0;
+  margin-top: 1rem;
 
   .form-tab-content {
-    @apply hidden h-92;
-
+    display: none;
+    height: 23rem;
     animation: backInRight;
     animation-duration: g.$animation-duration;
 
     &.active {
-      @apply block;
+      display: block;
     }
   }
 }
