--- a/src/app/feature/ui/layout/components/notifications/notifications-container.component.scss
+++ b/src/app/feature/ui/layout/components/notifications/notifications-container.component.scss
@@ -1,11 +1,19 @@
 @use '../../../../../../assets/css/global' as g;
 
 .notification-container {
-  @apply fixed right-10 top-0 z-30 w-96 pe-4 pt-2;
+  position: fixed;
+  top: 0;
+  right: 2.5rem;
+  z-index: 30;
+  width: 24rem;
+  padding-top: 0.5rem;
+  padding-inline-end: 1rem;
 
   .toast {
-    @apply mt-2 rounded-t-lg bg-base-300;
-
+    @apply bg-base-300;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+    margin-top: 0.5rem;
     position: relative;
     animation-name: backInRight;
     animation-duration: g.$animation-duration;
@@ -23,8 +31,11 @@
     }
 
     .indicator {
-      @apply absolute bottom-0 left-0 h-1 w-full;
-
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      height: 0.25rem;
+      width: 100%;
       animation: timeOut 5s linear 1 forwards;
     }
     &.success .indicator {
