--- a/src/app/shared/content/loader/loader.component.scss
+++ b/src/app/shared/content/loader/loader.component.scss
@@ -15,7 +15,9 @@ $loader-center-animation-duration: 1s;
   animation-iteration-count: infinite;
 
   .sub-loader {
-    @apply border-2 border-neutral-content;
+    @apply border-neutral-content;
+
+    border-width: 2px;
     top: 25%;
     left: 25%;
     width: 48px;
@@ -27,7 +29,10 @@ $loader-center-animation-duration: 1s;
     animation: rotation $loader-center-animation-duration linear infinite;
   }
   .sub-loader::after {
-    @apply border-4 border-transparent border-b-accent;
+    @apply border-b-accent;
+
+    border-color: transparent;
+    border-width: 4px;
     content: '';
     box-sizing: border-box;
     position: absolute;
