--- a/src/app/feature/ui/layout/header/header.component.html
+++ b/src/app/feature/ui/layout/header/header.component.html
@@ -26,7 +26,7 @@
             class="hidden lg:block"
             [isOpenMenu]="isOpenMenu()"
             [accountSettings]="activeAccountSettings()"
-            [accounts]="[]"
+            [accounts]="userAccounts()"
             [currentAccountUUID]="account.uuid"
             (copyToken)="copyTokenToClipboard()"
             (closeMenu)="closeMenu()"
@@ -44,7 +44,7 @@
     <app-top-menu-collapsable-menu
       [isOpenMenu]="isOpenMenu()"
       [accountSettings]="activeAccountSettings()"
-      [accounts]="[]"
+      [accounts]="userAccounts()"
       [currentAccountUUID]="account.uuid"
       (copyToken)="copyTokenToClipboard()"
       (closeMenu)="closeMenu()"
