--- a/src/app/feature/ui/layout/header/collapsable-menu/collapsable-menu.compoment.html
+++ b/src/app/feature/ui/layout/header/collapsable-menu/collapsable-menu.compoment.html
@@ -25,7 +25,7 @@
             @if (currentAccountUUID() === account.uuid) {
             <ng-icon name="saxTickCircleOutline" size="22"></ng-icon>
             } @else {
-            <ng-icon name="" size="22"></ng-icon>
+            <ng-icon size="22"></ng-icon>
             } {{ account.name }}
           </a>
           }
