feat: expose timeline by one component

--- a/src/app/feature/non-authorized/develop/develop-page.component.html
+++ b/src/app/feature/non-authorized/develop/develop-page.component.html
@@ -2,29 +2,19 @@
   <div class="p-4">
     <app-shared-content-title title="UI components" />
 
+    <div class="py-4" id="TimelineComponent">
+      <h2 class="text-2xl">TimelineComponent</h2>
+      <div class="mt-4 grid w-full grid-cols-1 gap-4">
+        <app-shared-timeline [timeline]="indexTimeline">
+          <h3>event submenu</h3>
+        </app-shared-timeline>
+      </div>
+    </div>
+
     <div class="py-4" id="MarkdownHelpComponent">
       <h2 class="text-2xl">MarkdownHelpComponent</h2>
       <div class="mt-4">
         <app-static-markdown-help />
-      </div>
-    </div>
-
-    <div class="py-4" id="EditEventFormComponent">
-      <h2 class="text-2xl">EditEventFormComponent</h2>
-      <div class="mt-4 grid grid-cols-2 gap-4">
-        <!-- <app-edit-event-form [editEvent]="null" [loading]="true" /> -->
-        <!-- <app-edit-event-form [editEvent]="null" [openTab]="4" /> -->
-        <!-- <app-edit-event-form [editEvent]="null" [openTab]="0" /> -->
-        <!-- <app-edit-event-form [editEvent]="null" [openTab]="1" /> -->
-        <!-- <app-edit-event-form [editEvent]="null" [openTab]="2" /> -->
-        <!-- <app-edit-event-form [editEvent]="null" [openTab]="3" /> -->
-      </div>
-    </div>
-
-    <div class="py-4" id="TimelineComponent">
-      <h2 class="text-2xl">TimelineComponent</h2>
-      <div class="mt-4 grid w-full grid-cols-1 gap-4">
-        <app-timeline [timeline]="[]" />
       </div>
     </div>
 
