--- a/src/app/feature/timeline/components/event/image/image.component.html
+++ b/src/app/feature/timeline/components/event/image/image.component.html
@@ -2,6 +2,10 @@
   @if (isLoading()) {
     <app-shared-loader />
   } @else {
-    <img [src]="image().previewUrl" [alt]="image().title" />
+    <img
+      [src]="image().previewUrl"
+      [alt]="image().title"
+      class="min-h-60 min-w-60"
+      loading="lazy" />
   }
 </div>
