--- a/src/app/feature/non-authorized/develop/develop-page.component.html
+++ b/src/app/feature/non-authorized/develop/develop-page.component.html
@@ -5,9 +5,7 @@
     <div class="py-4" id="TimelineComponent">
       <h2 class="text-2xl">TimelineComponent</h2>
       <div class="mt-4 grid w-full grid-cols-1 gap-4">
-        <app-shared-timeline [timeline]="indexTimeline">
-          <h3>event submenu</h3>
-        </app-shared-timeline>
+        <app-shared-timeline [timeline]="indexTimeline" />
       </div>
     </div>
 
